--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -276,7 +276,7 @@
     "title": "Projelerimiz",
     "rotatingTexts": {
       "mobileApp": "Mobil Uygulama",
-      "webApp": "Web Uygulaması", 
+      "webApp": "Web Sitesi", 
       "mpDevelopers": "MPDevelopers"
     },
     "subtitle": "Geliştirdiğimiz",
